# embercore-client

./: Cargo.toml  README.md
content/: bear.psd  blender.blend  test  tilemap.json  tileset.json
shaders/: compose.frag  mesh.frag  mesh.vert  tile.frag  tile.frag.spv  tile.vert  tile.vert.spv
src/: lib.rs  main.rs
src/game/: camera.rs  mod.rs
src/input/: device_input_state.rs  input_state.rs  mod.rs
src/rendering/: error.rs  frame.rs  frame_system.rs  mod.rs  prelude.rs  rendering_state.rs  screen_quad.rs  tilemap_renderer.rs  utils.rs
src/rendering/frame_subsystem/: composer.rs  frame.rs  mod.rs
src/rendering/systems/: composing_subsystem.rs  composing_system.rs  mod.rs
src/rendering/systems/frame_subsystem/: mod.rs
src/rendering/systems/frame_system/: frame.rs  mod.rs
src/rendering/systems/world_rendering_subsystem/: drawable_data_source.rs  mod.rs  view_data_source.rs
src/rendering/systems/world_rendering_system/: drawable_data_source.rs  mod.rs  view_data_source.rs
src/rendering/tilemap_renderer/: drawable_data_source.rs  mod.rs  tileset_data.rs  view_data_source.rs
src/resources/: error.rs  mod.rs
