[package]
name = "embercore-client"
version = "0.1.0"
authors = ["Rexagon <reide740@gmail.com>"]
edition = "2018"

[lib]
name = "embercore_client_lib"
path = "src/lib.rs"

[dependencies.embercore]
git = "https://github.com/BoringStudio/libembercore.git"

[dependencies]
async-trait = "0.1"
bincode = { git = "https://github.com/servo/bincode.git" }
bit-set = "0.5"
chrono = { version = "0.4.11", features = ["serde"] }
config = { version = "0.9", features = ["yaml"] }
clap = { version = "2.33" }
env_logger = "0.7"
futures = { version = "0.3" }
gltf = { version = "0.15", features = ["utils"] }
vulkano = "0.19"
vulkano-shaders = "0.19"
vulkano-win = "0.19"
log = { version = "0.4", features = ["std", "serde"] }
nalgebra = "0.20"
nalgebra-glm = "0.7"
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = "*"
tokio = { version = "0.2", features = ["full"] }
tokio-serde = { version = "0.6", features = ["bincode"] }
tokio-util = { version = "0.3", features = ["codec"] }
image = "0.23"
itertools = "0.9"
uuid = { version = "0.8", features = ["v4", "serde"] }
winit = "0.22"

[profile.release]
lto = true
