[package]
name = "embercore-client"
version = "0.1.0"
authors = ["Rexagon <reide740@gmail.com>"]
edition = "2018"

[lib]
name = "embercore_client_lib"
path = "src/lib.rs"

[dependencies.embercore]
git = "https://github.com/BoringStudio/libembercore.git"

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
bincode = { git = "https://github.com/servo/bincode.git" }
bit-set = "0.5"
bytemuck = "1"
chrono = { version = "0.4.11", features = ["serde"] }
config = { version = "0.9", features = ["yaml"] }
env_logger = "0.7"
futures = { version = "0.3" }
log = { version = "0.4", features = ["std", "serde"] }
nalgebra = "0.20"
nalgebra-glm = "0.7"
once_cell = "1.4"
png = "0.16"
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specs = "0.16"
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
tokio-serde = { version = "0.6", features = ["bincode"] }
tokio-util = { version = "0.3", features = ["codec"] }
itertools = "0.9"
uuid = { version = "0.8", features = ["v4", "serde"] }
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs.git", features = ["vulkan"] }
winit = "0.22"

[profile.release]
lto = true
